--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
   "private": true,
   "repository": "uxdream/react-bootstrap",
   "main": "src/index.js",
+  "config": {
+    "public_path": "/",
+    "port": 9000
+  },
   "scripts": {
-    "dev": "webpack-dev-server --config webpack/config.js",
+    "clean": "rimraf build/ *.log",
+    "build": "npm run clean && webpack --config webpack/config.build.js",
+    "dev": "npm run clean && webpack-dev-server --config webpack/config.dev.js",
     "lint": "eslint **/*.js"
   },
   "devDependencies": {
@@ -15,24 +21,31 @@
     "babel-core": "6.14.0",
     "babel-eslint": "6.1.2",
     "babel-loader": "6.2.5",
+    "babel-polyfill": "6.20.0",
     "babel-preset-es2015": "6.14.0",
     "babel-preset-react": "6.11.1",
     "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-0": "6.5.0",
+    "browser-sync": "2.18.5",
+    "browser-sync-webpack-plugin": "1.1.3",
     "css-loader": "0.24.0",
     "eslint": "3.4.0",
     "eslint-loader": "1.5.0",
     "eslint-plugin-import": "1.14.0",
     "eslint-plugin-react": "6.2.0",
+    "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "2.22.0",
+    "ip": "1.1.4",
     "node-sass": "3.8.0",
     "postcss-loader": "0.11.0",
     "react-dom": "15.3.1",
+    "rimraf": "2.5.4",
     "sass-loader": "4.0.0",
     "style-loader": "0.13.1",
     "webpack": "1.13.2",
-    "webpack-dev-server": "1.15.0"
+    "webpack-dev-server": "1.15.0",
+    "webpack-merge": "1.1.1"
   },
   "dependencies": {
     "bootstrap": "4.0.0-alpha.3",
